infrastructure/traefik/release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
